# parrot-rs

./: Cargo.toml  Dockerfile  Makefile  Readme.md
.github/workflows/: ci.yml  container.yml
src/: lib.rs  main.rs
src/filters/: error.rs  mod.rs  pokemon.rs
src/schema/: funtraslation.rs  mod.rs  pokeapi.rs
src/services/: mod.rs
tests/: integration.rs
