[package]
name = "parrot-rs"
version = "0.1.0"
authors = ["Antonino Bertulla <abertulla@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
warp = "0.3"
reqwest = { version = "0.11.0", features = ["json"] }
log = "0.4.14"
pretty_env_logger = "0.4"

[dev-dependencies]
httpmock = "0.5.5"

[lib]
test = false
doctest = false
